# Dante-2

./: README.md
1 Pliki/1.1 - Pliki - pierwsze kroki/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
1 Pliki/1.10 - Wczytaj, dodaj i zapisz/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
1 Pliki/1.11 - Nie tekstowy/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
1 Pliki/1.12 - Zabawy z plikami binarnymi ciąg dalszy/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
1 Pliki/1.13 - Pokaż kotku, co masz w środku/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
1 Pliki/1.2 - Ile waży plik (trojański)/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
1 Pliki/1.21 (WYMAGANE) Ukryta wiadomość/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
1 Pliki/1.23 (WYMAGANE) Incepcja/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
1 Pliki/1.3 - Co dwa pliki, to nie jeden/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_helper_v2.h  unit_test_v2.c
1 Pliki/1.4 - nedej ein ot ,ikilp awd oC/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
1 Pliki/1.5 -  A teraz czas na liczby/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
1 Pliki/1.6 - 0, 2, 3 i 5/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
1 Pliki/1.8 - Wczytaj, dodaj i wyświetl/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
1 Pliki/1.9 - Wczytaj, dodaj, uśrednij i wyświetl/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
10 Dynamiczne struktury danych/10.1 - Stos - podejście pierwsze/: CMakeLists.txt  main.c  makefile  stack.c  stack.h  tested_declarations.h  unit_test_v2.c
10 Dynamiczne struktury danych/10.10 - (WYMAGANE) Lista dwukierunkowa/: CMakeLists.txt  doubly_linked_list.c  doubly_linked_list.h  main.c  makefile  tested_declarations.h  unit_test_v2.c
10 Dynamiczne struktury danych/10.2 - Dynamiczny stos/: CMakeLists.txt  main.c  makefile  stack.c  stack.h  tested_declarations.h  unit_test_v2.c
10 Dynamiczne struktury danych/10.3 - Ile to będzie/: CMakeLists.txt  main.c  makefile  stack.c  stack.h  tested_declarations.h  unit_test_v2.c
10 Dynamiczne struktury danych/10.4 - (WYMAGANE) Dynamiczny stos - wszystko na opak/: CMakeLists.txt  main.c  makefile  stack.c  stack.h  tested_declarations.h  unit_test_v2.c
10 Dynamiczne struktury danych/10.7 - Lista jednokierunkowa/: CMakeLists.txt  linked_list.c  linked_list.h  main.c  makefile  tested_declarations.h  unit_test_v2.c
2 Strukturty/2.1 W punkt/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
2 Strukturty/2.10 - Jeszcze więcej punktów/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
2 Strukturty/2.11 - Najbliższe punkty/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
2 Strukturty/2.18 - (WYMAGANE) I w strukturze plik być może/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
2 Strukturty/2.20 (WYMAGANE) Ukryta wiadomość II/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
2 Strukturty/2.4 - Punkt, Save, Mecz/: CMakeLists.txt  main.c  makefile  rdebug.h  tested_declarations.h  unit_test_v2.c
2 Strukturty/2.6 - Odcinek/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
2 Strukturty/2.7 - Liczby zespolone - koszmar powraca/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
2 Strukturty/2.8 - Kiedy to było/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
2 Strukturty/2.9 - Liczb zespolonych ciąg dalszy/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
3 Unie/3.1 - Int jako zbiór bajtów/: CMakeLists.txt  byte_set.h  main.c  makefile  tested_declarations.h  unit_test_v2.c
3 Unie/3.10 (WYMAGANE) Figury geometryczne/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
3 Unie/3.12 (WYMAGANE) Ukryta wiadomość/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
3 Unie/3.2 - Int jako dwa słowa/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c  word_set.h
3 Unie/3.4 - Różne twarze inta/: CMakeLists.txt  bit_set.h  main.c  makefile
3 Unie/3.5 - Parity/: CMakeLists.txt  bit_set.h  main.c  makefile
3 Unie/3.7 - Zapis double do pliku/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
3 Unie/3.9 - Binarny plik tekstowy/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
4 Dynamiczna alokacja pamięci I/4.1 Alokacja i wypełnianie/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
4 Dynamiczna alokacja pamięci I/4.10 - (WYMAGANE) Bufor cykliczny/: CMakeLists.txt  circular_buffer.c  circular_buffer.h  main.c  makefile  tested_declarations.h  unit_test_v2.c
4 Dynamiczna alokacja pamięci I/4.11 - (WYMAGANE) Vector/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c  vector.c  vector.h
4 Dynamiczna alokacja pamięci I/4.2 - Alokacja pamięci dla jednej zmiennej/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
4 Dynamiczna alokacja pamięci I/4.3 - Alokacja pamięci i funkcje/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
4 Dynamiczna alokacja pamięci I/4.4 - Alokacja pamięci i funkcje - ciąg dalszy/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
4 Dynamiczna alokacja pamięci I/4.5 - Kopiowanie i wyświetlanie tablicy/: CMakeLists.txt  main.c  makefile  tested_declarations.h  unit_test_v2.c
4 Dynamiczna alokacja pamięci I/4.6 - Bezpieczna tablica/: CMakeLists.txt  array.c  array.h  main.c  makefile  tested_declarations.h  unit_test_v2.c
5 Dynamiczna alokacja pamięci II/5.1 - Dynamiczna tabliczka mnożenia/: CMakeLists.txt  main.c  makefile  (+2 more)
(+194 files in other folders)
